[project]
name = "youtube-comment-analysis"
version = "0.1.0"
description = "YouTube comment sentiment analysis for 유아인 research"
authors = [
    {name = "Research Team", email = "research@example.com"},
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    # NLP & ML Models
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    "bertopic>=0.15.0",
    "gensim>=4.3.0",
    "konlpy>=0.6.0",
    # Clustering & Dimensionality Reduction
    "umap-learn>=0.5.3",
    "hdbscan>=0.8.29",
    "pyLDAvis>=3.4.0",
    # Data Processing
    "datasets>=2.12.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "wordcloud>=1.9.0",
    "networkx>=3.1.0",
    # Templates & Reports
    "jinja2>=3.1.0",
    # Korean NLP
    "soynlp>=0.0.493",
    # Utilities
    "tqdm>=4.65.0",
    # File Handling
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    # Jupyter
    "jupyter>=1.0.0",
    "ipykernel>=6.23.0",
    "mecab-python3>=1.0.10",
]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
] 
